--- a/06_Paper/ER-ED/TheoreticalBackground.Rmd
+++ b/06_Paper/ER-ED/TheoreticalBackground.Rmd
@@ -21,7 +21,7 @@ here::i_am("flag_project_root_CERED.txt")
 Every day we are confronted with stressful or emotionally demanding situations. 
 The ability to modify emotional experiences, expressions, and physiological reactions [@Gross1998antecedent] to regulate emotions is an important cognitive skill. 
 It is therefore not surprising that emotion regulation (ER) has substantial implications for well-being and adaptive functioning [@Gross1998emerging].
-Different strategies <!-- Ich bin immer noch nicht so richtig dahinter gekommen, was eigentlich der Unterschied zwischen strategies und tactics ist, ich meine, ich weiß, was der Unterschied zwischen einer Strategie und einer Taktik ist, aber inwiefern das in ER eine Rolle spiel, ist mir noch nicht so klar gweorden, aber ich habe auch Powers & LaBar nicht gelesen --> can be used to regulate emotions, namely situation selection, situation modification, attentional deployment, cognitive change, and response modification [@Gross1998antecedent], and, following the taxonomy of Powers and LaBar [-@Powers2019], individuals can implement ER strategies by means of different tactics.
+Different strategies can be used to regulate emotions, namely situation selection, situation modification, attentional deployment, cognitive change, and response modification [@Gross1998antecedent], and, following the taxonomy of Powers and LaBar [-@Powers2019], individuals can implement ER strategies by means of different tactics.
 So called antecedent-focused strategies, e.g., attentional deployment and cognitive change, take effect early in the emotion generation process [@Gross1998antecedent].
 In contrast, response modification takes place late in the process and is therefore conceptualized as a response-focused strategy [@Gross1998antecedent].
 This postulated temporal sequence of ER strategies influences their effectiveness.
