deleted unnecessary libraries

--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -10,19 +10,20 @@ editor_options:
 ```{r SetupMethod, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 
-library(targets)    # to keep track of all relevant files
-library(readxl)     # import excel files
+#library(readxl)     # import excel files
 library(here)       # to set directories without defined paths
-library(papaja)     # APA conform output
-library(afex)       # for ANOVA
-library(emmeans)
-library(ggplot2)    # for nice plots
-library(dplyr)
-library(BayesFactor)
-library(effectsize)
-
 # set top level directory to source file
 here::i_am("flag_project_root_CERED.txt")
+
+library(papaja)     # APA conform output
+#library(afex)       # for ANOVA
+#library(emmeans)
+#library(ggplot2)    # for nice plots
+#library(dplyr)
+#library(BayesFactor)
+#library(effectsize)
+
+
 ```
 
 ```{r stimvalues, echo = FALSE}
