--- a/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
+++ b/06_Paper/ER-ED/Manuscript_ERED_Stage1.Rmd
@@ -119,7 +119,7 @@ library(papaja) # APA conform output
 library(kableExtra) # for tables in R Markdown
 
 # load workspace variables from analyses_ERED.R script
-load(here("06_Paper","ER-ED","WorkspaceERED.RData"))
+load(here("06_Paper","ER-ED","Workspace_ERED.RData"))
 
 ```
 
