--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -10,28 +10,20 @@ editor_options:
 ```{r SetupMethod, include = FALSE}
 knitr::opts_chunk$set(echo = FALSE)
 
-library(readxl)     # import excel files
 library(here)       # to set directories without defined paths
 # set top level directory to source file
 here::i_am("flag_project_root_CERED.txt")
 
 library(papaja)     # APA conform output
-#library(afex)       # for ANOVA
-#library(emmeans)
-#library(ggplot2)    # for nice plots
-#library(dplyr)
-#library(BayesFactor)
-#library(effectsize)
-
-
+library(readxl)     # import excel files
 ```
 
 ```{r stimvalues, echo = FALSE}
 # import excel list with neutral and negative pictures
 # lists contain arousal and valence values of each picture
-stim_negative = readxl::read_xlsx(file.path(here("01_Paradigms", "ER-ED", "ER_ED", "Stimuli", "negative.xlsx")), range = cell_cols("A:D"))
+stim_negative <- readxl::read_xlsx(file.path(here("01_Paradigms", "ER-ED", "ER_ED", "Stimuli", "negative.xlsx")), range = cell_cols("A:D"))
 
-stim_neutral = readxl::read_xlsx(file.path(here("01_Paradigms", "ER-ED", "ER_ED", "Stimuli", "neutral.xlsx")), range = cell_rows(1:21))
+stim_neutral <- readxl::read_xlsx(file.path(here("01_Paradigms", "ER-ED", "ER_ED", "Stimuli", "neutral.xlsx")), range = cell_rows(1:21))
 ```
 
 
