added main packages

--- a/06_Paper/ER-ED/ER_ED.bib
+++ b/06_Paper/ER-ED/ER_ED.bib
@@ -543,6 +543,14 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6326885/pdf/nihms-1515865.pdf},
   doi     = {10.2139/ssrn.2160588},
 }
 
+@Manual{Singmann2021,
+  title  = {afex: {A}nalysis of factorial experiments},
+  author = {Henrik Singmann and Ben Bolker and Jake Westfall and Frederik Aust and Mattan S. Ben-Shachar},
+  note   = {R package version 1.0-1},
+  year   = {2021},
+  url    = {https://CRAN.R-project.org/package=afex},
+}
+
 @article{Sproesser2011,
    author = {Sproesser, G. and Strohbach, S. and Schupp, H. and Renner, B.},
    title = {Candy or apple? How self-control resources and motives impact dietary healthiness in women},
